# wikinews-nlp

./: .gitignore  .pre-commit-config.yaml  AE.NLP.2.5.md  README.md  main.py  pyproject.toml
config/: config.yaml
docs/: CHANGELOG.md  DECISIONS.md  PRD.md  SPEC_v3.md  ai-engineering-field-guide.md  code_implementation.md  code_implementation_issues.md
docs/decisions/: 0001-huggingface-for-ner.md  0002-english-only-summarization.md  0003-dataset-agnostic-pipeline.md  0004-sequential-gpu-loading.md  0005-language-only-grouping.md
notebooks/: analysis.ipynb
scripts/: review_spec.py
src/: data_inspector.py  data_loader.py  data_normalizer.py  ner.py  preprocessing.py  similarity.py  summarizer.py  topic_predictor.py  utils.py
tests/: conftest.py  test_data_inspector.py  test_data_loader.py  test_data_normalizer.py  test_ner.py  test_preprocessing.py  test_similarity.py  test_summarizer.py  test_topic_predictor.py
