[project]
name = "wikinews-nlp"
version = "0.1.0"
description = "Wikinews multilingual NLP analysis pipeline"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0,<5.0.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "spacy>=3.7.0,<4.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "mwparserfromhell>=0.6.4",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "truststore>=0.10.4",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
