[project]
name = "wikinews-nlp"
version = "0.1.0"
description = "Wikinews multilingual NLP analysis pipeline"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0,<5.0.0",
    "sentence-transformers>=2.7.0,<3.0.0",
    "spacy>=3.7.0,<4.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "mwparserfromhell>=0.6.4",
    "jupyter>=1.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "pycountry>=26.2.16",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "truststore>=0.10.4",
    "pre-commit>=4.6.0",
]

# PyTorch is not on PyPI — CUDA builds live on PyTorch's own index.
# Install one of the extras below; "cpu" is the safe default.
#   uv sync --extra cpu        no GPU / unknown hardware
#   uv sync --extra cu121      CUDA 12.1
#   uv sync --extra cu124      CUDA 12.4  (check: nvidia-smi)
[project.optional-dependencies]
cpu   = ["torch>=2.1.0"]
cu121 = ["torch>=2.1.0"]
cu124 = ["torch>=2.1.0"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu",   extra = "cpu"   },
  { index = "pytorch-cu121", extra = "cu121" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.indexes]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.indexes]]
name = "pytorch-cu121"
url  = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.indexes]]
name = "pytorch-cu124"
url  = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]  # Notebook cells often import after config/path setup

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
